feat: add dlq to entropy job mapper (WIP)
